<resources>
    <string name="app_name">Pranacoin Wallet</string>
    <string name="quit_dialog_message">Exit: Are you sure?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="title_home">Home</string>
    <string name="title_send">Send</string>
    <string name="title_history">History</string>
    <string name="title_backup">Backup</string>
    <string name="title_restore">Restore</string>
    <string name="title_balance">Balance:</string>
    <string name="title_my_address">My address:</string>
    <string name="private_key_qr_code">private key QR-code</string>
    <string name="get_private_key">Receive private key</string>
    <string name="receive_private_key_message">
        Press button below in order to receive private key. Save it in the safe place.
    </string>
    <string name="input_address_here">Input address here…</string>
    <string name="input_sum_here">Input sum here…</string>
    <string name="scan">Scan Address</string>
    <string name="public_address_qr_code">public address QR-Code</string>
    <string name="continue_button">Continue</string>
    <string name="accept_privacy_policy">I have READ and ACCEPT this Privacy Policy</string>
    <string name="locale_asset_path">/</string>
    <string name="commission_message">Commission: up to 0.1 PNC</string>
    <string name="not_enough_funds_or_empty">You do not have enough funds on your balance to send this amount and pay the commission or the fields are left empty</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="scanning_cancelled">Scanning cancelled by user</string>
    <string name="transfer_executed_successfully">Your transfer has been successfully executed</string>
    <string name="transfer_status">Transfer Status</string>
    <string name="server_client_id" translatable="false">501302853560-hh47bs4n80lb3lr4agr3v7svis66kiav.apps.googleusercontent.com</string>
    <string name="defaultProgressBarText">Operation in progress. Please wait…</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="scanResult">"Scan result: "</string>
    <string name="private_key_qr_generation_failed">Could not create QR-code for private key</string>
    <string name="public_address_qr_generation_failed">Could not create QR code for public address</string>
    <string name="privacy_policy">политика конфиденциальности</string>
</resources>
