<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation"
  app:startDestination="@+id/homeFragment">
  
  <fragment
    android:id="@+id/homeFragment"
    android:name="io.github.castasat.pranacoin_wallet.view.fragment.HomeFragment"
    tools:layout="@layout/fragment_home"
    android:label="@string/title_home"/>
  
  <fragment
    android:id="@+id/sendFragment"
    android:name="io.github.castasat.pranacoin_wallet.view.fragment.SendFragment"
    tools:layout="@layout/fragment_send"
    android:label="@string/title_send"/>
  
  <fragment
    android:id="@+id/backupFragment"
    android:name="io.github.castasat.pranacoin_wallet.view.fragment.BackupFragment"
    tools:layout="@layout/fragment_backup"
    android:label="@string/title_backup"/>
  
</navigation>